--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
     <!-- Load the sidebar content -->
     <script>
+        if(!window.localStorage.getItem("user")){
+            window.location.replace("./login.html")
+        }
         $(function () {
             $("#sidebar").load("sidebar.html");
         });
