--- a/inplay.html
+++ b/inplay.html
@@ -59,6 +59,9 @@
     <script src="js/inplay.js"></script>
 
     <script>
+      if(!window.localStorage.getItem("user")){
+            window.location.replace("./login.html")
+        }
         $(function () {
             $("#sidebar").load("sidebar.html");
         });
