--- a/sidebar.html
+++ b/sidebar.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Goobsan</a>
+      <a class="navbar-brand" href="#">Golsan</a>
       <button
         class="navbar-toggler"
         type="button"
